final version - website connected to server

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
     </nav>
 
-    <h1>Assignment 2: "Scripting"</h1>
+    <h1>Assignments</h1>
     <h2>Web Tech Group 70</h2>
     <h2 style="font-size: x-large">Josh & Bodhi</h2>
 
@@ -41,7 +41,7 @@
                 <th><strong>Alt Text</strong></th>
                 <th><strong>Tags</strong></th>
                 <th><strong>Description</strong></th>
-                <th><strong>Edit</strong></th>
+                <th><strong>Update</strong></th>
             </tr>
 <!-- 
             <tr>
@@ -153,10 +153,7 @@
                             </td>
                             <td>
                                 <label for="description">Description: </label><br>
-                                <textarea class="inModal" id="description" name="description" required>Albert Camus was a French philosopher and author, who pioneered the philosophy of absurdism.
-                                    He joined the French Resistance during WWII where he served as editor-in-chief at
-                                    <em>Combat</em>, an outlawed newspaper.
-                                </textarea>
+                                <textarea class="inModal" id="description" name="description" required>Albert Camus was a French philosopher and author, who pioneered the philosophy of absurdism. He joined the French Resistance during WWII where he served as editor-in-chief at 'Combat', an outlawed newspaper.</textarea>
                             </td>
                         </tr>
                     </table>
